# goit-web-hw-05

./: pyproject.toml
app/: main.py
